tests/NormalTests/paczka1/fuzzy1/64360556.err
Error in line 3: S206 S729 62,9
Error in line 2: 1DH2R S206 43,6
Error in line 5: 1DH2R S729 71,7
Error in line 4: S206 S571 26,9
Error in line 6: 1DH2R S571 57,8
Error in line 9: x3uaHE4cl S206 5,5
Error in line 19: 6KBTtlGe S206 0,2
Error in line 22: 6KBTtlGe S729 31,0
